Revision history for Perl extension MooseX-Getopt

{{$NEXT}}

0.48      2012-12-23 18:08:04 PST-0800
 - documentation and tests amended to prefer usage of 'trait' over 'metaclass'
   as much as possible
 - print_usage_text() exposed as a public method, to make it easier for
   consuming classes to modify the behaviour when usage text is printed

0.47      2012-08-30 16:37:59 PDT-0700
 - re-release to remove double $VERSION declarations

0.46      2012-08-30 15:17:28 PDT-0700
 - -h is also treated as a --help option

0.45      2012-05-13 09:49:58 PDT-0700
 - use Path::Class in test to avoid test failures on MSWin32 with filename
   construction

0.44      2012-05-11 10:44:48 PDT-0700
 - now respecting value of configfile passed to the constructor, when used in
   conjunction with MooseX::ConfigFromFile. (Karen Etheridge)

0.43      2012-04-29 09:35:52 PDT-0700
 - re-release as non-trial.

0.42-TRIAL 2012-04-15 09:13:05 PDT-0700
 - reformatted the Changes file, with the help of CPAN::Changes, to something
   a little more standard.
 - more release-only tests added

0.41-TRIAL 2012-04-14 18:36:00 PDT-0700
 - Now bails with exit status 0, rather than dying, when printing
   requested --usage/--help information (usage printed via invalid arguments
   will still die, however). (Karen Etheridge)

0.40      2012-04-13
 - Fix tests when MooseX::ConfigFromFile is installed, with
   Getopt::Long::Descriptive >= 0.091. RT#76287
 - Pod fix from debian. Salvatore Bonaccorso <carnil@debian.org> RT#74681
 - Spelling fix from debian. Jonathan Yu <jawnsy@cpan.org> RT#74681

0.39      2012-02-03
 - Fix argument parsing in process_argv when used with ConfigFromFile so
   that -v can be used as expected, rather than being grabbed as --version

0.38      2011-12-23
 - More documentation on Getopt::Long settings and how they alter this
   role's behaviour, in particular with regards to extra_argv capturing.
   (Karen Etheridge)

0.37      2011-03-30
 - Fix missing dependency. (RT#67077)
