@@ -1,6 +1,8 @@
 Revision history for Perl extension MooseX-Getopt
 
 {{$NEXT}}
+ - silence a warning in tests if the user does not have YAML::XS installed
+   (thanks for the report, Getty!)
 
 0.48      2012-12-23 18:08:04 PST-0800
  - documentation and tests amended to prefer usage of 'trait' over 'metaclass'
